# stsauth

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.yaml  .trivyignore.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README  README.md  cli.py  okta.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  stsauth.py  super-linter.env  tox.ini
.github/: super-linter.env
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump-version.yml  ci.yml  linter.yml  publish-docker.yml  publish-pypi.yml  publish.yml  release.yaml  super-linter.env
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-plugin-system-for-auth-otp-workflow.md  0003-isolate-configuration-system.md
sts_auth/: cli.py  config.py  okta.py  profile.py  profile_set.py  stsauth.py  utils.py
stsauth/: cli.py  okta.py  stsauth.py  utils.py
tests/: context.py  test_config.py  test_profile.py  test_stsauth.py  test_utils.py
tests/fixtures/: fixtures.py
tests/fixtures/html/: account_list.html  saml_account.html  saml_role.html
