[metadata]
name = stsauth
author = Scott Hamrick
author_email = scott@scotthamrick.com
description = CLI tool for fetching AWS tokens.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cshamrick/stsauth
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Utilities

[options]
python_requires = >=3.8,<4.0
packages = find:
install_requires =
    boto3 <2
    beautifulsoup4 <5
    Click >=8,<9
    click-log <0.4
    requests <3
    requests_ntlm <2
    lxml <5
    pyotp <3
    urllib3<1.30
    importlib_metadata;python_version<'3.8'
    backoff<2.3
[options.entry_points]
console_scripts =
    stsauth=sts_auth.cli:cli

[options.extras_require]
dist =
    build
    twine
dev =
    ipython
    ipdb
    pylint
tests =
    tox
    mock
    nose
    flake8
    pytest
    coverage
    pytest-cov
